Fixed card flip on mobile

--- a/style.css
+++ b/style.css
@@ -277,7 +277,7 @@ main {
     left: 3;
     width: 100%;
     height: 100%;
-    background-color: rgba(238, 228, 218, 0.7); /* Adjusted for transparency */
+    background-color: rgba(238, 228, 218, 0.7); 
     z-index: -1;
     padding: 0.2em;
     border-radius: 5px;
@@ -299,7 +299,7 @@ main {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(238, 228, 218, 0.7); /* Adjusted for transparency */
+    background-color: rgba(238, 228, 218, 0.7); /
     z-index: -1;
     padding: 0.2em;
     border-radius: 5px;
@@ -430,13 +430,24 @@ main {
     }
 
     .card-face.front {
-        transform: rotateY(180deg);
+        background-color: rgba(238, 228, 218, 0.7); 
+        z-index: 2;
+        transform: rotateY(0deg);
     }
-
+    
     .card-face.back {
+        background: var(--background-light); 
+        transform: rotateY(180deg);
+        padding: 10px;
+        text-align: center;
+        z-index: 1;
+    }
+    
+    .prayer-card.flip {
         transform: rotateY(180deg);
     }
-
+    .prayer-card.flip .back {
+        transform: rotateY(180deg);
     .kaaba-needle {
         height: 60px;
     }
